fix modules